--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--верхняя линяя-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="contanier header-contanier">
         <a class="logo-blue" href="./index.html"
           >Web<span class="logo-header" lang="en">Stydio</span>
@@ -66,19 +66,19 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!--шапка сайта-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="contanier">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-navigtion" type="button" data-modal-open>
             Заказать услугу
           </button>
-        </div>
+        </div> -->
         <!-- Модальное окно -->
-        <div class="backdrop is-hidden" data-modal>
+        <!-- <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <form class="form">
               <strong class="modal-form"
@@ -149,7 +149,7 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!--особенности-->
       <section class="peculiarities ">
@@ -208,7 +208,7 @@
         </div>
       </section>
       <!--чем мы занимаемся-->
-      <section class="what-are-we-doing-pading section">
+      <!-- <section class="what-are-we-doing-pading section">
         <div class="contanier">
           <div class="what-are-we-doing-h">
             <h2 class="what-are-we-doing">Чем мы занимаемся</h2>
@@ -246,9 +246,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--наша команда-->
-      <section class="team">
+      <!-- <section class="team">
         <div class="contanier team__contanier">
           <h2 class="team__our-team">Наша команда</h2>
           <ul class="card">
@@ -592,9 +592,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--постоянные клиенты-->
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="contanier clients__contanier">
           <div class="clients__permanent-clients-h">
             <h2 class="clients__permanent-clients">Постоянные клиенты</h2>
@@ -680,10 +680,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--подвал-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="contanier footer-contanier">
             <div class="logo-footer-group">
                 <a class="logo-blue-footer" href="./index.html">Web<span class="logo-footer" lang="en">Stydio</span>
@@ -748,7 +748,7 @@
      </div>
     </div>
         
-    </footer>
+    </footer> -->
 
     <script src="./js/modal.js"></script>
   </body>
