--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
       </section> -->
       <!--чем мы занимаемся-->
-      <section class="what-are-we-doing-pading section"> 
+      <!-- <section class="what-are-we-doing-pading section"> 
         <div class="contanier">
           <div class="what-are-we-doing-h">
             <h2 class="what-are-we-doing">Чем мы занимаемся</h2>
@@ -246,9 +246,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> --> -->
       <!--наша команда-->
-      <!-- <section class="team">
+      <section class="team"> 
         <div class="contanier team__contanier">
           <h2 class="team__our-team">Наша команда</h2>
           <ul class="card">
