--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </div>
       </section> --> -->
       <!--наша команда-->
-      <section class="team"> 
+      <section class="team">  
         <div class="contanier team__contanier">
           <h2 class="team__our-team">Наша команда</h2>
           <ul class="card">
@@ -592,9 +592,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
       <!--постоянные клиенты-->
-      <!-- <section class="clients">
+      <!-- <section class="clients"> 
         <div class="contanier clients__contanier">
           <div class="clients__permanent-clients-h">
             <h2 class="clients__permanent-clients">Постоянные клиенты</h2>
@@ -680,7 +680,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>  -->
     </main>
     <!--подвал-->
     <!-- <footer class="footer">
