--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section> -->
 
       <!--особенности-->
-      <!-- <section class="peculiarities ">
+       <section class="peculiarities ">
         <div class="contanier peculiarities-contanier">
           <h2 class="peculiarities__peculiarities-title" hidden>Особенности</h2>
           <ul class="peculiarities__list-peculiarities">
@@ -206,9 +206,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--чем мы занимаемся-->
-      <!-- <section class="what-are-we-doing-pading section"> 
+      <section class="what-are-we-doing-pading section">  -->
         <div class="contanier">
           <div class="what-are-we-doing-h">
             <h2 class="what-are-we-doing">Чем мы занимаемся</h2>
@@ -246,7 +246,7 @@
             </li>
           </ul>
         </div>
-      </section> --> -->
+      </section>
       <!--наша команда-->
       <section class="team">  
         <div class="contanier team__contanier">
