--- a/index.html
+++ b/index.html
@@ -351,10 +351,17 @@
             <li class="card__member-item">
               <img
                 class="card__member-img"
+                srcset="./images/main/team-1-270.jpg 270w,
+                ./images/main/team-1-354.jpg 354w,
+                ./images/main/team-1-450.jpg 450w,
+                "
+                sizes="(min-width: 1200px) 270px,
+                 (min-width: 768px) 354px,
+                  (max-width: 767px) 450px, 100vw"
                 src="./images/main/team/team-1_sm.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="card__member-group">
                 <h3 class="card__member-title">Игорь Демьяненко</h3>
