--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,62 @@
             <li class="portfolio-list">  
                 <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">  
                 <div class="blok-insert">
-               <img class="portfolio-img" src="./images/portfolio/img.jpg" alt="ноутбук" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img_lg.webp    1x,
+      ./images/portfolio/img_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img_lg.jpg    1x,
+      ./images/portfolio/img_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img_md.webp    1x,
+      ./images/portfolio/img_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img_md.jpg    1x,
+      ./images/portfolio/img_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img_sm.webp    1x,
+      ./images/portfolio/img_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img_sm.jpg    1x,
+      ./images/portfolio/img_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                
+               <img class="portfolio-img" src="./images/portfolio/img_sm.jpg"
+                alt="ноутбук"
+                width="450"
+                height="294"
+                loading="lazy"
+                >
+               </picture>
                 <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
                <div class="portfolio-group">
@@ -94,7 +149,62 @@
             <li class="portfolio-list" >
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-               <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="баскетболисты" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-1_lg.webp    1x,
+      ./images/portfolio/img-1_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-1_lg.jpg    1x,
+      ./images/portfolio/img-1_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-1_md.webp    1x,
+      ./images/portfolio/img-1_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-1_md.jpg    1x,
+      ./images/portfolio/img-1_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-1_sm.webp    1x,
+      ./images/portfolio/img-1_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-1_sm.jpg    1x,
+      ./images/portfolio/img-1_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                
+               <img class="portfolio-img" src="./images/portfolio/img-1_sm.jpg"
+                alt="баскетболисты"
+                width="450"
+                height="294"
+                loading="lazy"
+                  >
+            </picture>                  
                 <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                 <div class="portfolio-group">
@@ -106,7 +216,63 @@
             <li class="portfolio-list"> 
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-2.jpg" alt="логотип ресторана" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-2_lg.webp    1x,
+      ./images/portfolio/img-2_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-2_lg.jpg    1x,
+      ./images/portfolio/img-2_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-2_md.webp    1x,
+      ./images/portfolio/img-2_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-2_md.jpg    1x,
+      ./images/portfolio/img-2_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-2_sm.webp    1x,
+      ./images/portfolio/img-2_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-2_sm.jpg    1x,
+      ./images/portfolio/img-2_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                        
+                <img class="portfolio-img"
+                 src="./images/portfolio/img-2_sm.jpg" 
+                 alt="логотип ресторана" 
+                 width="450" 
+                 height="294"
+                 loading="lazy"
+                 >
+            </picture>             
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                  <div class="portfolio-group">
@@ -118,7 +284,63 @@
             <li class="portfolio-list">
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-3.jpg" alt="наушники" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-3_lg.webp    1x,
+      ./images/portfolio/img-3_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-3_lg.jpg    1x,
+      ./images/portfolio/img-3_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-3_md.webp    1x,
+      ./images/portfolio/img-3_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-3_md.jpg    1x,
+      ./images/portfolio/img-3_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-3_sm.webp    1x,
+      ./images/portfolio/img-3_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-3_sm.jpg    1x,
+      ./images/portfolio/img-3_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                        
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-3_sm.jpg" 
+                alt="наушники" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+            </picture>            
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                  <div class="portfolio-group">
@@ -130,7 +352,64 @@
             <li class="portfolio-list">
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-4.jpg" alt="боксы" width="370" height="294">
+           <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-4_lg.webp    1x,
+      ./images/portfolio/img-4_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-4_lg.jpg    1x,
+      ./images/portfolio/img-4_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-4_md.webp    1x,
+      ./images/portfolio/img-4_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-4_md.jpg    1x,
+      ./images/portfolio/img-4_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-4_sm.webp    1x,
+      ./images/portfolio/img-4_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-4_sm.jpg    1x,
+      ./images/portfolio/img-4_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                         
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-4_sm.jpg" 
+                alt="боксы" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+            </picture>
+                
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                  <div class="portfolio-group">
@@ -142,7 +421,63 @@
             <li class="portfolio-list">
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-5.jpg" alt="монитор" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-5_lg.webp    1x,
+      ./images/portfolio/img-5_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-5_lg.jpg    1x,
+      ./images/portfolio/img-5_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-5_md.webp    1x,
+      ./images/portfolio/img-5_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-5_md.jpg    1x,
+      ./images/portfolio/img-5_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-5_sm.webp    1x,
+      ./images/portfolio/img-5_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-5_sm.jpg    1x,
+      ./images/portfolio/img-5_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                        
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-5_sm.jpg" 
+                alt="монитор" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+            </picture>
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                  <div class="portfolio-group">
@@ -154,7 +489,63 @@
             <li class="portfolio-list"> 
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-6.jpg" alt="разворот журнала" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-6_lg.webp    1x,
+      ./images/portfolio/img-6_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-6_lg.jpg    1x,
+      ./images/portfolio/img-6_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-6_md.webp    1x,
+      ./images/portfolio/img-6_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-6_md.jpg    1x,
+      ./images/portfolio/img-6_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-6_sm.webp    1x,
+      ./images/portfolio/img-6_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-6_sm.jpg    1x,
+      ./images/portfolio/img-6_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                        
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-6_sm.jpg" 
+                alt="разворот журнала" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+            </picture>
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                  <div class="portfolio-group">
@@ -166,7 +557,63 @@
             <li class="portfolio-list">
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-7.jpg" alt="Бирка" width="370" height="294">
+            <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-7_lg.webp    1x,
+      ./images/portfolio/img-7_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-7_lg.jpg    1x,
+      ./images/portfolio/img-7_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-7_md.webp    1x,
+      ./images/portfolio/img-7_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-7_md.jpg    1x,
+      ./images/portfolio/img-7_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-7_sm.webp    1x,
+      ./images/portfolio/img-7_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-7_sm.jpg    1x,
+      ./images/portfolio/img-7_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                        
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-7_sm.jpg" 
+                alt="Бирка" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+            </picture>
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                  <div class="portfolio-group">
@@ -178,7 +625,63 @@
             <li class="portfolio-list">
             <a class="sending" href="http://" target="_blank" rel="noopener noreferrer">
                 <div class="blok-insert">
-                <img class="portfolio-img" src="./images/portfolio/img-8.jpg" alt="печать на ноутбуке" width="370" height="294">
+                <picture>
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-8_lg.webp    1x,
+      ./images/portfolio/img-8_lg@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 1200px)"
+    srcset="
+      ./images/portfolio/img-8_lg.jpg    1x,
+      ./images/portfolio/img-8_lg@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-8_md.webp    1x,
+      ./images/portfolio/img-8_md@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(min-width: 768px)"
+    srcset="
+      ./images/portfolio/img-8_md.jpg    1x,
+      ./images/portfolio/img-8_md@2x.jpg 2x
+    "
+    type="image/jpg"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-8_sm.webp    1x,
+      ./images/portfolio/img-8_sm@2x.webp 2x
+    "
+    type="image/webp"
+  />
+  <source
+    media="(max-width: 767px)"
+    srcset="
+      ./images/portfolio/img-8_sm.jpg    1x,
+      ./images/portfolio/img-8_sm@2x.jpg 2x
+    "
+    type="image/jpg"
+  />                    
+                <img class="portfolio-img" 
+                src="./images/portfolio/img-8_sm.jpg" 
+                alt="печать на ноутбуке" 
+                width="450" 
+                height="294"
+                loading="lazy"
+                >
+                </picture>
                  <p class="product-action">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                </div>
                  <div class="portfolio-group">
